fixed span text-wrapping

--- a/public/style.css
+++ b/public/style.css
@@ -84,3 +84,8 @@ h2,
 .footer-class {
   padding-top: 1rem;
 }
+
+.span-text {
+  display: block;
+  word-wrap: break-word;
+}
